# reuse-ai

./: .gitignore
.claude/: settings.local.json
design-system/: 01-rate-limiter.md  02-flight-reservation.md  03-url-shortener.md  04-notification-system.md  05-payment-system.md  06-chat-system.md  07-api-gateway.md  09-news-feed.md  (+13 more)
python/fastapi-template/: .dockerignore  .env.example  .gitignore  EXPLAINED.md  GOOGLE_OAUTH2.md  Makefile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
python/fastapi-template/.docker/: Dockerfile  entrypoint.sh
python/fastapi-template/alembic/: env.py
python/fastapi-template/app/: main.py
python/fastapi-template/app/api/: deps.py
python/fastapi-template/app/api/middleware/: request_logging.py
python/fastapi-template/app/api/v1/: router.py
python/fastapi-template/app/api/v1/routes/: auth.py  google_auth.py  health.py  users.py
python/fastapi-template/app/core/: config.py  constants.py  exception_handlers.py  logging.py  security.py
python/fastapi-template/app/db/: base.py  init_db.py  session.py
python/fastapi-template/app/exceptions/: domain.py
python/fastapi-template/app/models/: base_model.py  user.py
python/fastapi-template/app/repositories/: base_repository.py  user_repository.py
python/fastapi-template/app/schemas/: common.py  user.py
python/fastapi-template/app/services/: auth_service.py  user_service.py
python/fastapi-template/scripts/: create_superuser.py
python/fastapi-template/tests/: conftest.py
python/fastapi-template/tests/integration/api/: test_auth.py  test_health.py
(+108 files in other folders)
