[project]
name = "fastapi-template"
version = "0.1.0"
requires-python = ">=3.12"
description = "Production-grade FastAPI REST API template"

[project.dependencies]
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
python-multipart = ">=0.0.9"
sqlalchemy = {version = ">=2.0.0", extras = ["asyncio"]}
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"
pydantic = {version = ">=2.7.0", extras = ["email"]}
pydantic-settings = ">=2.3.0"
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}
passlib = {version = ">=1.7.4", extras = ["bcrypt"]}
structlog = ">=24.0.0"
httpx = ">=0.27.0"
redis = {version = ">=5.0.0", extras = ["asyncio"]}
slowapi = ">=0.1.9"
asgi-correlation-id = ">=4.3.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-passlib",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
omit = ["alembic/*", "tests/*", "scripts/*"]
